# Chip8

./: CMakeLists.txt  Cowgod's Chip-8 Technical Reference.html  README.md
include/: Platform.h  chip8.h  platform.h
libs/SDL2/include/SDL2/: SDL_config.h
libs/SDL2/lib/pkgconfig/: sdl2.pc
src/: chip8.cpp  main.cpp  platform.cpp
src/Instruction/: IO.cpp  control.cpp  data.cpp  display.cpp  reg.cpp
